kubernetes/nginx/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: nginx
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.kube-home-01.hochschulte.me`)
      kind: Rule
      #      middlewares:
      #        - name: default-headers
      #          namespace: default
      services:
        - name: nginx
          kind: Service
          port: 80
  tls:
    secretName: production-hochschulte-me-tls
#    secretName: staging-hochschulte-me-tls
